--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 .carousel-section {
     text-align: center;
     background-color: #fff;
-    padding: 60px 20px;
+    padding: 0px 21px 0px;
   }
   
   .carousel-section h2 {
@@ -73,16 +73,24 @@
 
   /* Gallery Styles */
 .gallery-section {
-    padding: 60px 20px;
+    padding: 0px 20px;
     background: #f7f9fb;
     text-align: center;
   }
   
   .gallery-section h2 {
     font-size: 28px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
-  
+  .gallery-item{
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  padding: 15px;
+  background: #fff;
+  text-align: center;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  }
   .gallery-grid {
     display: grid;
     gap: 20px;
@@ -613,4 +621,98 @@
 
 .buy-now-button:active {
   transform: scale(0.98);
+}
+
+.product-card {
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  padding: 15px;
+  background: #fff;
+  text-align: center;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.product-price {
+  font-size: 16px;
+  font-weight: bold;
+  color: green;
+  margin-bottom: 4px;
+  line-height: 1.5;
+}
+
+.product-img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.product-details {
+  margin-top: 1px;
+}
+
+.product-name {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.product-meta {
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 4px;
+}
+
+.get-price-btn {
+  background-color: #005f46;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 6px;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background 0.3s ease;
+}
+
+.get-price-btn:hover {
+  background-color: #008060;
+}
+
+/* Navbar Styles */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 10px 16px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.menu-icon {
+  font-size: 22px;
+  cursor: pointer;
+  color: #333;
+}
+
+.logo {
+  font-family: 'Orbitron', sans-serif;
+  font-size: 24px;
+  color: #2c3e50;
+  font-weight: 800;
+}
+
+.brand-title {
+  font-size: 18px;
+  font-weight: 600;
+  color: #333;
+}
+
+.navbar-right {
+  font-size: 20px;
+  color: #333;
+  cursor: pointer;
 }
