--- a/styles.css
+++ b/styles.css
@@ -720,7 +720,7 @@
 .image-slider {
   position: relative;
   width: 100%;
-  max-width: 250px;
+  /* max-width: 250px; */
   overflow: hidden;
 }
 
