--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Sofia');
 * {
     margin: 0;
     padding: 0;
@@ -882,9 +883,13 @@
 
 .under-line
 {
-  text-decoration: underline;
-  color: #0619c5;
-  font-size: 40px!important;
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 30px!important;
+  color: #000000;
+  font-weight: 800;
+  text-shadow: 3px 3px 3px #d6d4d4;
 }
 
 .about-us-section {
